@@ -1,3 +1,4 @@
+* Wizard to modify payment date from a move line can now work with several lines
 * Aggregate payment moves per group key if available
 * UI enhancement on payment group list view (add amount and payment dates)
 * Add predefined motive on creation payment wizard
